# qwen-memory-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  active_use.py  baselines.py  generate.py  plot.py  plot_active_use.py  run.py  score.py  validate_embeddings.py
benchmark/results/: active_use.json
deploy/: ecs_setup.md
docs/: SUBMISSION.md  demo-script.md  devpost-story.md  embedding-validation.md
docs/design/: memory-governance.md
docs/gates/: abstention-temporal.md  agentic-loop.md  decay.md  dreaming-loop.md  memory-io.md  persistent-store.md  qwen-memory-agent.md  semantic-supersession.md  token-observability.md  typed-retrieval.md
docs/qa/: active-use-findings.md  benchmark-scale-honesty.md  conversational-fuzz-findings.md  hackathon-review.md
scripts/: active_use_live.py  conversational_fuzz.py  demo.sh  make_arch.py
src/memory_agent/: __init__.py  agent.py  api.py  dream.py  engine.py  inspector.html  mcp_server.py  models.py  qwen.py  store.py
tests/: test_active_use.py  test_agent.py  test_api.py  test_benchmark.py  test_decay.py  test_dream.py  test_engine.py  test_memory_io.py  test_persistence.py  test_score.py  test_typed_retrieval.py  test_usage.py
