[project]
name = "qwen-memory-agent"
version = "0.1.0"
description = "Benchmarked, MCP-native persistent-memory agent on Qwen Cloud (Track 1, Qwen Cloud Hackathon)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryan Duffy", email = "ryanduffy.uk@gmail.com" }]
dependencies = [
    "openai>=1.40",        # OpenAI-compatible client -> DashScope-intl
    "qdrant-client>=1.10",  # vector store (local :memory: mode works in tests)
    "fastmcp>=0.4",         # MCP server exposing memory.* tools
    "fastapi>=0.111",       # HTTP backend
    "uvicorn>=0.30",        # ASGI server
    "numpy>=1.26",          # scoring / vector math
    "tiktoken>=0.7",        # approximate token counting for budget packing
    "pydantic>=2.7",        # typed memory records
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]   # optional: plot the context-efficiency curve

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "src"]
filterwarnings = [
    # Cosmetic: FastAPI's TestClient still imports httpx via starlette; upstream
    # deprecation, nothing in our code to change. Targeted (message-matched) so we
    # don't hide any other warning.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
